src/styles/general.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

body {
	padding: 0;
	margin: 0;
	overflow-x: hidden;
}

* {
	font-family: "Nanum Gothic", sans-serif;
	box-sizing: border-box;
	background-repeat: no-repeat;
}

#root {
	width: 1920px;
	overflow: hidden;
}

.containerType {
	width: 100%;
	position: relative;
	background-size: 100% 100%;
	display: flex;
	flex-direction: column;
}

.containerType > .title {
	background-size: 100% 100%;
	margin-inline: auto;
}

button {
	transition: scale 200ms ease-in-out;
	border: none;
	background-color: transparent;
	cursor: pointer;
}

button:hover {
	transform: scale(1.1);
}

@media screen and (max-width: 768px) {
	#root {
		width: 768px;
	}
}

